--- a/views/adminView/adminHeader.ejs
+++ b/views/adminView/adminHeader.ejs
@@ -32,11 +32,11 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <!-- <li class="menu-item active">
-                    <a class="menu-link" href="index.html"> <i class="icon material-icons md-home"></i>
+                <li class="menu-item active">
+                    <a class="menu-link" href="./dashboard"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
-                </li> -->
+                </li>
                 <li class="menu-item">
                     <a class="menu-link" href="./product"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
