--- a/views/adminView/productManagement.ejs
+++ b/views/adminView/productManagement.ejs
@@ -13,11 +13,11 @@
     </div>
     <header class="card card-body mb-4">
       <div class="row gx-3">
-        <!-- <form class="d-flex" role="search" method="post" >
+        <form class="d-flex" role="search" action="/admin/proSearch" method="post" >
             <div class="col-lg-4 col-md-6 me-auto">
-              <input type="search" placeholder="Search..." class="form-control" name="search" value="<%#= productSearch %>"/>
+              <input type="search" placeholder="Search..." class="form-control" name="psearch" value="<%= productSearch %>"/>
             </div>
-            </form> -->
+            </form>
       </div>
     </header>
     <!-- card-header end// -->
