--- a/views/adminView/adminHeader.ejs
+++ b/views/adminView/adminHeader.ejs
@@ -62,11 +62,11 @@
                         <span class="text">Coupon</span>
                     </a>
                 </li>
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="./offers"> <i class="icon material-icons md-check_circle"></i>
-                        <span class="text">Offers</span>
+                <li class="menu-item">
+                    <a class="menu-link" href="./report"> <i class="icon material-icons md-check_circle"></i>
+                        <span class="text">Sales Report</span>
                     </a>
-                </li> -->
+                </li>
             <br>
             <br>
         </nav>
