--- a/views/adminView/user_Management.ejs
+++ b/views/adminView/user_Management.ejs
@@ -10,7 +10,7 @@
     </div>
     <header class="card card-body mb-4">
       <div class="row gx-3">
-        <form class="d-flex" role="search" method="post" >
+        <form class="d-flex" role="search" action="/admin/userS" method="post" >
         <div class="col-lg-4 col-md-6 me-auto">
           <input type="search" placeholder="Search..." class="form-control" name="search" value="<%= nameSearch %>"/>
         </div>
