--- a/views/userView/userOrderPlaced.ejs
+++ b/views/userView/userOrderPlaced.ejs
@@ -66,7 +66,7 @@
                 <div class="container">
                     <h1>Order Placed Successfully</h1>
                     <h5>OrderId : <%= id %></h5>
-                    <h5>Date : <%= date %></h5>
+                    <h5>Date : <%= date.toLocaleDateString() %></h5>
                     <h5>Total Quantity : <%= qunatity %></h5>
                     <h5>Total Price :₹ <%= price %></h5>
                     <p>Your order has been successfully placed. Thank you for shopping with us!</p>
