--- a/views/adminView/productManagement.ejs
+++ b/views/adminView/productManagement.ejs
@@ -85,6 +85,19 @@
       </div>
     </div>
   </div>
+
+
+  <div class="pagination-area mt-15 mb-50">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        <% for(let page = 1; page <= totalPages; page++){ %>
+          <li class="page-item <%= currentPage === page ? 'active' : '' %>">
+            <a class="page-link btn-primary" href="?page=<%=page%>"><%=page%></a>
+          </li>
+        <% } %>
+      </ul>
+    </nav>
+  </div>
    
   </section>
 
